<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    app:cardElevation="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/albumCover"
                android:layout_width="129dp"
                android:layout_height="135dp"
                android:contentDescription="@string/albumCover"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/musicTitle"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:gravity="center_horizontal"
                    android:text="@string/musicTitle"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnPlay"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/off_white"
                        android:contentDescription="@string/playButton"
                        app:srcCompat="@android:drawable/ic_media_play" />

                    <ImageButton
                        android:id="@+id/btnPause"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/off_white"
                        android:contentDescription="@string/pauseButton"
                        app:srcCompat="@android:drawable/ic_media_pause" />

                    <ImageButton
                        android:id="@+id/btnFavorite"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/off_white"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/addToFavorite"
                        app:srcCompat="@drawable/ic_launcher_foreground"
                        tools:srcCompat="@android:drawable/btn_star" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
